--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Herbicides</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <p class="card-text">Les herbicides, utilisés principalement pour contrôler les mauvaises herbes, représentent la majorité des volumes appliqués dans l'agriculture... </p>
                             <a href="#" class="btn btn-green">Voir Plus</a>
                         </div>
                     </div>
