--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Fongicides</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <p class="card-text">Les fongicides, utilisés pour combattre les maladies fongiques, ont vu leur utilisation augmenter en réponse à des conditions climatiques...</p>
                             <a href="#" class="btn btn-green">Voir Plus</a>
                         </div>
                     </div>
