--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Herbicides</h5>
                             <p class="card-text">Les herbicides, utilisés principalement pour contrôler les mauvaises herbes, représentent la majorité des volumes appliqués dans l'agriculture... </p>
-                            <a href="#" class="btn btn-green">Voir Plus</a>
+                            <a href="graphique.html" class="btn btn-green">Voir Plus</a>
                         </div>
                     </div>
                 </div>
@@ -47,8 +47,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Insecticides</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            <a href="#" class="btn btn-green">Voir Plus</a>
+                            <p class="card-text">Les insecticides sont des produits chimiques ou biologiques conçus pour éliminer ou repousser les insectes nuisibles aux cultures...</p>
+                            <a href="graphique.html" class="btn btn-green">Voir Plus</a>
                         </div>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Fongicides</h5>
                             <p class="card-text">Les fongicides, utilisés pour combattre les maladies fongiques, ont vu leur utilisation augmenter en réponse à des conditions climatiques...</p>
-                            <a href="#" class="btn btn-green">Voir Plus</a>
+                            <a href="graphique.html" class="btn btn-green">Voir Plus</a>
                         </div>
                     </div>
                 </div>
